@@ -1,3 +1,4 @@
+- Bungo : Added ability to auto-select last booted partition as the boot volume.
 - Bungo : Added MacOSVerCurrent and MacOSVer2Int function to use instead of macros.
 - Bungo : Fixed bug in gDarwinBuildVerStr extracting.
 - Bungo : Fixed fixedUUID function (convert.c smbios.c).
